# Loopr

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  build-instructions.md  package-lock.json  vercel-config.md
Loopr-Backend/: .gitignore  Anchor.toml  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json
Loopr-Backend/programs/loopr-subscription/: Cargo.toml
Loopr-Backend/programs/loopr-subscription/src/: errors.rs  lib.rs  state.rs
Loopr-Backend/programs/loopr-subscription/src/instructions/: automated_payment.rs  cancel_subscription.rs  confirm_payment.rs  create_payment_intent.rs  create_subscription.rs  initialize_global_state.rs  initialize_payment_thread.rs  initialize_subscription_plan.rs  mod.rs  process_payment.rs  subscribe_and_pay.rs  update_subscription_plan.rs
Loopr-Backend/scripts/: create-sample-plan.ts  initialize.ts
Loopr-Backend/tests/: loopr-subscription.ts  qr-payment-flow.ts
Loopr-SDK/: README.md  package-lock.json  package.json  rollup.config.js  test-qr.js  test-theme-qr.js  test-updated-qr.js  test.ts  tsconfig.json
Loopr-SDK/src/: index.ts
Loopr-SDK/src/components/: PayWithLoopr.tsx
Loopr-SDK/src/payment/: createIntent.ts  createPlanPaymentIntent.ts  types.ts
Loopr-SDK/src/plans/: config.ts  (+2 more)
Loopr-Web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Loopr-Web/src/: App.tsx  index.css  main.tsx  polyfills.ts  vite-env.d.ts
Loopr-android/: build.gradle.kts  settings.gradle.kts
Loopr-android/app/: build.gradle.kts
Loopr-android/gradle/: libs.versions.toml
(+62 files in other folders)
