[package]
name = "loopr-subscription"
version = "0.1.0"
description = "Loopr subscription and payment management smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loopr_subscription"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"